Fix card select boundaries overflowing due to translated rank icon

--- a/play_rummy/static/css/style.css
+++ b/play_rummy/static/css/style.css
@@ -102,6 +102,7 @@ div.card {
     margin: .5rem;
     margin-right: -3rem;
     cursor: default;
+    overflow: hidden;
 }
 
 div.card svg.icon-suit,
